--- a/css/main.scss
+++ b/css/main.scss
@@ -35,8 +35,15 @@ $on-laptop:        800px;
 //     }
 // }
 
+body {
+	margin: 0px;
+	background-color: midnightblue;
+	/*indigo, mediumblue, royalblue*/
+}
+
 .nav {
 	/*display: flex;*/
+	height: 400px;
 }
 
 .nav__title {
@@ -65,6 +72,7 @@ $on-laptop:        800px;
 	position: relative;
 	z-index: -1;
 	flex-wrap: wrap;
+	align-items: flex-end;
 }
 
 .nav__bar {
@@ -90,4 +98,27 @@ $on-laptop:        800px;
 	to {
 		background-color: hsl(220, 90%, 65%);
 	}
+}
+
+.about {
+	font-size: 2rem;
+	color: cornflowerblue;
+	margin: 2em 1em;
+}
+
+.about--header {
+	text-align: center;
+}
+
+.about__intro,
+.about__experience {
+	margin: 2em 0em;
+}
+
+.about__experience--skills {
+	list-style: none;
+	column-count: 3;
+	column-width: auto;
+	text-align: center;
+	column-rule: medium solid black;
 }
