--- a/css/main.scss
+++ b/css/main.scss
@@ -106,13 +106,41 @@ body {
 	margin: 2em 1em;
 }
 
+.about--description::first-letter {
+	font-size: 1.75em;
+}
+
 .about--header {
 	text-align: center;
+	font-size: 1.75em;
 }
 
 .about__intro,
 .about__experience {
 	margin: 2em 0em;
+}
+
+.about__experience {
+	transform: skewY(5deg);
+	background-color: cornflowerblue;
+	color: midnightblue;
+	margin: 3em 0em;
+	padding: 0.15em 0em;
+}
+
+.about__test {
+	transform: skewY(-5deg);
+	background-color: none;
+}
+
+.about__tail {
+	transform: skewY(-10deg);
+	background-color: cornflowerblue;
+	width: 100%;
+	height: 200px;
+	position: absolute;
+	top: 300px;
+	z-index: -1;
 }
 
 .about__experience--skills {
@@ -121,4 +149,29 @@ body {
 	column-width: auto;
 	text-align: center;
 	column-rule: medium solid black;
+}
+
+.about__projects {
+	margin: 5em 0em;
+}
+
+.project {
+	display: flex;
+	justify-content: space-between;
+	margin: 2em 0em;
+}
+
+.project:nth-child(even) {
+	flex-direction: row-reverse;
+}
+
+.project__description {
+	font-size: 1.45rem;
+
+}
+
+.fake-image {
+	width: 200px;
+	height: 150px;
+	background-color: purple;
 }
