--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footer">
 	<section>
 		<p>Copyright (c) 2017 Patrick Lafferty. Powered by Jekyll, design by Patrick Lafferty</p>
 	</section>
