picked the fonts, simplified the main colours to just two to clean up the look, added the links bar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,13 @@ document.addEventListener("DOMContentLoaded", function() {
 
 		<div class="nav__tiles"> 
 		</div>
+
+		<nav class="links-bar">
+			<ul class="links-bar__list">
+				<li class="link">Work</li>
+				<li class="link">Blog</li>
+			</ul>
+		</nav>
 	</section>
 
 	<!--
