--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,8 +54,9 @@ document.addEventListener("DOMContentLoaded", function() {
 
 		<nav class="links-bar">
 			<ul class="links-bar__list">
-				<li class="link">Work</li>
-				<li class="link">Blog</li>
+				<li class="link"><a href="/">Home</a></li>
+				<li class="link"><a href="/#projects">Work</a></li>
+				<li class="link"><a href="/blog">Blog</a></li>
 			</ul>
 		</nav>
 	</section>
