--- a/css/main.scss
+++ b/css/main.scss
@@ -35,7 +35,8 @@
 
 body {
 	margin: 0px;
-	background-color: var(--secondary-colour);
+	/*background-color: var(--secondary-colour);*/
+	background-color: midnightblue;
 }
 
 @media only screen and (min-width: 800px) {
@@ -70,10 +71,14 @@ body {
 
 .nav__text {
 	clip-path: url(#shape);
-	background-color: var(--secondary-colour);
+	/*background-color: var(--secondary-colour);*/
+	max-width: 20em;
 	height: 20em;
-	color: var(--primary-colour);
+	/*color: var(--primary-colour);*/
+	background-color: midnightblue;
+	color: cornflowerblue;
 }
+
 
 .nav__text--name {
 	font-size: 2.75em;
@@ -83,8 +88,10 @@ body {
 
 .nav__text--role {
 	font-size: 1.75em;
-	color: var(--primary-colour);
+	/*color: var(--primary-colour);*/
+	color: cornflowerblue;
 }
+
 
 .nav__tiles {
 	display: flex;
@@ -109,7 +116,7 @@ body {
 	flex: 1 1 auto;
 	animation-direction: alternate;
 	background-color: hsl(200, 99%, 55%);
-	margin: -1px 0px;
+	margin: -1px -1px -1px 0px;
 }
 
 @keyframes col {
@@ -136,16 +143,20 @@ body {
 .link {
 	padding: 1.5rem;
 	font-size: 2em;
-	background-color: var(--secondary-colour);
-	color: var(--primary-colour);
+	/* background-color: var(--secondary-colour);
+	color: var(--primary-colour); */
+	background-color: midnightblue;
+	color: cornflowerblue;
 	font-family: "Exo 2";
 	transition: font-size 0.4s, color 0.4s, background-color 0.4s;
 }
 
 .link:hover {
 	font-size: 2.5em;
-	background-color: var(--primary-colour);
-	color: var(--secondary-colour);
+	/*background-color: var(--primary-colour);
+	color: var(--secondary-colour);*/
+	background-color: cornflowerblue;
+	color: midnightblue;
 }
 
 a {
@@ -154,12 +165,12 @@ a {
 
 .about {
 	font-size: 2rem;
-	color: var(--primary-colour);
+	/*color: var(--primary-colour);*/
+	color: cornflowerblue;
 	margin: 2em 1em;
 }
 
 .about--description {
-	/*font-family: 'Roboto';*/
 }
 
 .about--description::first-letter {
@@ -169,7 +180,6 @@ a {
 .about--header {
 	text-align: center;
 	font-size: 1.75em;
-	/*font-family: "Rokkitt";*/
 }
 
 .about__intro,
@@ -179,8 +189,10 @@ a {
 
 .about__experience {
 	transform: skewY(5deg);
-	background-color: var(--primary-colour);
-	color: var(--secondary-colour);
+	/*background-color: var(--primary-colour);
+	color: var(--secondary-colour);*/
+	background-color: cornflowerblue;
+	color: midnightblue;
 	margin: 3em 0em;
 	padding: 0.15em 0em;
 }
@@ -193,7 +205,8 @@ a {
 
 .about__tail {
 	transform: skewY(-10deg);
-	background-color: var(--primary-colour);
+	/*background-color: var(--primary-colour);*/
+	background-color: cornflowerblue;
 	width: 100%;
 	height: 200px;
 	position: absolute;
@@ -206,7 +219,8 @@ a {
 	column-count: 3;
 	column-width: auto;
 	text-align: center;
-	column-rule: medium solid var(--secondary-colour);
+	/*column-rule: medium solid var(--secondary-colour);*/
+	column-rule: medium solid midnightblue;
 }
 
 .about__projects {
@@ -239,15 +253,18 @@ a {
 	height: 5rem;
 	font-size: 1.5em;
 	padding: 1em;
-	background-color: var(--primary-colour);
-	color: var(--secondary-colour);
+	/*background-color: var(--primary-colour);
+	color: var(--secondary-colour);*/
+	background-color: cornflowerblue;
+	color: midnightblue;
 	font-family: "Oswald";
 }
 
 .post__header {
 	font-family: "Oswald";
 	font-size: 3.5em;
-	color: var(--primary-colour);
+	/*color: var(--primary-colour);*/
+	color: cornflowerblue;
 	display: flex;
 	justify-content: space-between;
 	align-items: baseline;
@@ -265,7 +282,8 @@ a {
 .post__content {
 	font-family: "Exo 2";
 	font-size: 1.5em;
-	color: var(--primary-colour);
+	/*color: var(--primary-colour);*/
+	color: cornflowerblue;
 	background-color: #202020;
 	padding: 1em;
 }
@@ -277,4 +295,60 @@ a {
 img {
 	max-width: 100%;
 	display: block;
+}
+
+@supports (--foo: blue) {
+
+	body {
+		background-color: var(--secondary-colour);
+	}
+
+	.nav__text {
+		background-color: var(--secondary-colour);
+		color: var(--primary-colour);
+	}
+
+	.nav__text--role {
+		color: var(--primary-colour);
+	}
+
+	.link {
+		background-color: var(--secondary-colour);
+		color: var(--primary-colour); 
+	}
+
+	.link:hover {
+		background-color: var(--primary-colour);
+		color: var(--secondary-colour);
+	}
+
+	.about {
+		color: var(--primary-colour);
+	}
+
+	.about__experience {
+		background-color: var(--primary-colour);
+		color: var(--secondary-colour);
+	}
+
+	.about__tail {
+		background-color: var(--primary-colour);
+	}
+
+	.about__experience--skills {
+		column-rule: medium solid var(--secondary-colour);
+	}
+
+	.footer {
+		background-color: var(--primary-colour);
+		color: var(--secondary-colour);
+	}
+
+	.post__header {
+		color: var(--primary-colour);
+	}
+	
+	.post__content {
+		color: var(--primary-colour);
+	}
 }
