--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,6 @@
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2|Oswald">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do|Raleway">
 	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 </head>
