--- a/css/main.scss
+++ b/css/main.scss
@@ -4,8 +4,8 @@
 @charset "utf-8";
 
 :root {
-	--primary-colour: cornflowerblue;
-	--secondary-colour: midnightblue;
+	--primary-colour: midnightblue;
+	--secondary-colour: cornflowerblue; 
 	--tiles-per-row: 7;
 }
 
@@ -21,22 +21,9 @@
 	font-family: "Exo 2";
 }
 
-/*@font-face {
-	font-family: 'Exo2';
-	font-style: normal;
-	src: url(../fonts/Exo_2/Exo2-Regular.ttf); 
-}
-
-@font-face {
-	font-family: 'Oswald';
-	font-style: normal;
-	src: url(../fonts/Oswald/Oswald-Regular.ttf);
-}*/
-
 body {
 	margin: 0px;
-	/*background-color: var(--secondary-colour);*/
-	background-color: midnightblue;
+	background-color: #6EC7FC;
 }
 
 @media only screen and (min-width: 800px) {
@@ -59,7 +46,7 @@ body {
 }
 
 * {
-	line-height: 1.618em;
+	line-height: 1.8;/*1.618em;*/
 }
 
 .nav {
@@ -258,21 +245,37 @@ a {
 	height: 5rem;
 	font-size: 1.5em;
 	padding: 1em;
-	/*background-color: var(--primary-colour);
-	color: var(--secondary-colour);*/
 	background-color: cornflowerblue;
 	color: midnightblue;
 	font-family: "Oswald";
 }
 
 .post__header {
-	font-family: "Oswald";
+	font-family: "Nothing you could do";
 	font-size: 3.5em;
-	/*color: var(--primary-colour);*/
-	color: cornflowerblue;
+	color: #161A1D;
 	display: flex;
 	justify-content: space-between;
 	align-items: baseline;
+	text-shadow: 1px 1px 2px rgba(0,0,0, 0.3);
+	line-height: 1.5;
+}
+
+.post__content > h1 {
+	text-align: center;
+	border-image: radial-gradient(circle, #399FDB 0%, transparent 90%) 1 / 7px 0px 7px 0px;
+	border-style: solid;
+	font-family: "Nothing you could do";
+	width: 90%;
+	margin: auto;
+	margin-top: 2rem;
+	font-size: 2rem;
+	padding: 0.5rem;
+}
+
+.post__title {
+	flex: 1 0 auto;
+	line-height: 1.3;
 }
 
 .post__title,
@@ -280,20 +283,33 @@ a {
 	margin: 0em;
 }
 
+.post__content > p:first-of-type::first-letter {
+	font-size: 8rem;
+	padding: 0rem 1rem;
+	margin-left: 2rem;
+	float: left;
+}
+
+.post__title::first-letter {
+	font-size: 8rem;
+}
+
 .post__date {
 	font-size: 1.5rem;
+	flex: 0 1 auto;
 }
 
 .post__content {
-	font-family: "Exo 2";
-	font-size: 1.5em;
-	/*color: var(--primary-colour);*/
-	color: cornflowerblue;
-	background-color: #202020;
-	padding: 1em;
+	font-family: "Raleway";
+	font-size: 1.4rem;
+	color: #161A1D;
+	background-color: #B7E4FF;	
+	padding: 1em 2em;
+	box-shadow: 0px 0px 7px 1px #161A1D;
+	background: linear-gradient(30deg, #ffffff, #B7E4FF);
 }
 
-.post__content > p {
+.post__content > p:not(:first-of-type) {
 	text-indent: 2em;
 }
 
@@ -308,10 +324,6 @@ img {
 }
 
 @supports (--foo: blue) {
-
-	body {
-		background-color: var(--secondary-colour);
-	}
 
 	.nav__text {
 		background-color: var(--secondary-colour);
@@ -352,13 +364,5 @@ img {
 	.footer {
 		background-color: var(--primary-colour);
 		color: var(--secondary-colour);
-	}
-
-	.post__header {
-		color: var(--primary-colour);
-	}
-	
-	.post__content {
-		color: var(--primary-colour);
 	}
 }
