--- a/css/main.scss
+++ b/css/main.scss
@@ -190,6 +190,58 @@ a {
 	padding: 0em 1em;
 }
 
+.site__header {
+	margin: 0rem 0rem 1rem 0rem;
+	display: flex;
+	justify-content: space-between;
+	box-shadow: 0px 0px 7px 1px #161A1D;
+}
+
+.header__name {
+	font-size: 3rem;
+	flex: 1 1 50%;
+	font-family: "Nothing you could do";
+	margin: 0;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+	font-weight: bold;
+	padding: 1rem;
+	height: 5rem;
+	background-image: linear-gradient(to right, #399FDB, transparent, #399FDB);
+	display: flex;
+	justify-content: space-around;
+}
+
+.name__word {
+	margin: 0;
+}
+
+.name__word:first-letter {
+	font-size: 5rem;
+	line-height: 1.0;
+}
+
+.header__navbar {
+	flex: 1 1 30%;
+	margin: 0;
+	font-family: "Raleway";
+}
+
+.navbar__links {
+	display: flex;
+	list-style: none;
+	background: #161A1D;
+	justify-content: space-between;
+	align-items: center;
+	padding: 1rem;
+	height: 5rem;
+	font-size: 2rem;
+	margin: 0;
+}
+
+.navbar__link {
+	text-decoration: none;
+}
+
 .about__tail {
 	transform: skewY(-10deg);
 	/*background-color: var(--primary-colour);*/
@@ -256,9 +308,12 @@ a {
 	color: #161A1D;
 	display: flex;
 	justify-content: space-between;
-	align-items: baseline;
+	align-items: center;
+	flex-direction: column;
 	text-shadow: 1px 1px 2px rgba(0,0,0, 0.3);
 	line-height: 1.5;
+	background-image: linear-gradient(to right, #399FDB, transparent, #399FDB);
+	box-shadow: 0px 0px 7px 1px #161A1D;
 }
 
 .post__content > h1 {
@@ -323,46 +378,3 @@ img {
 	justify-content: center;
 }
 
-@supports (--foo: blue) {
-
-	.nav__text {
-		background-color: var(--secondary-colour);
-		color: var(--primary-colour);
-	}
-
-	.nav__text--role {
-		color: var(--primary-colour);
-	}
-
-	.link {
-		background-color: var(--secondary-colour);
-		color: var(--primary-colour); 
-	}
-
-	.link:hover {
-		background-color: var(--primary-colour);
-		color: var(--secondary-colour);
-	}
-
-	.about {
-		color: var(--primary-colour);
-	}
-
-	.about__experience {
-		background-color: var(--primary-colour);
-		color: var(--secondary-colour);
-	}
-
-	.about__tail {
-		background-color: var(--primary-colour);
-	}
-
-	.about__experience--skills {
-		column-rule: medium solid var(--secondary-colour);
-	}
-
-	.footer {
-		background-color: var(--primary-colour);
-		color: var(--secondary-colour);
-	}
-}
