--- a/css/main.scss
+++ b/css/main.scss
@@ -309,27 +309,39 @@ a {
 }
 
 .about__projects {
-	margin: 5em 0em;
+	height: auto;
 }
 
 .project {
-	display: flex;
-	justify-content: space-between;
-	margin: 2em 0em;
+	margin-bottom: 5rem;
+	height: 22rem;
 }
 
-.project:nth-child(even) {
-	flex-direction: row-reverse;
+.project__header {
+	clip-path: polygon(0 0, 100% 0, 80% 100%, 20% 100%);
+	background: #399FDB;
+	margin: 0;
+	padding: 0;
+}
+
+.project__banner {
+	shape-outside: polygon(0 0, 100% 0, 50% 100%, 0 100%);
+	clip-path: polygon(0 0, 100% 0, 50% 100%, 0 100%);
+	height: 21rem;
+	padding: 0rem 1rem;
+	display: flex;
+	flex-direction: column;
 }
 
 .project__name {
-	font-size: 2rem;
-	margin: 0rem 2rem 1rem 2rem;
+	font-family: "Nothing you could do";
+	font-size: 3.8rem;
+	margin: 0;
 }
 
-.project__description {
-	font-size: 1.45rem;
-	margin: 0rem 2rem 1rem 2rem;
+.project__brief {
+	margin: 0;
+	font-size: 1.5rem;
 }
 
 .fake-image {
