--- a/css/main.scss
+++ b/css/main.scss
@@ -122,7 +122,7 @@ body {
 }
 
 a {
-	color: lightskyblue;
+	color: #399FDB;
 }
 
 .about {
@@ -190,8 +190,8 @@ a {
 	width: 20rem;
 	height: 21rem;
 	float: left;
-	shape-outside: polygon(0 0, 0 100%, 80% 100%);
-	clip-path: polygon(0 0, 0 100%, 80% 100%);
+	shape-outside: polygon(0 0, 0 100%, 95% 100%);
+	clip-path: polygon(0 0, 0 100%, 95% 100%);
 	display: flex;
 	align-items: end;
 }
@@ -200,6 +200,7 @@ a {
 	shape-outside: polygon(100% 0, 100% 100%, 0 100%);
 	clip-path: polygon(100% 0, 100% 100%, 0 100%);
 	float: right;
+	width: 22rem;
 }
 
 .right {
@@ -210,6 +211,7 @@ a {
 	margin: 0;
 	font-family: "Nothing you could do";
 	font-size: 2.8rem;
+	padding: 1rem;
 }
 
 .side__content--right {
@@ -255,6 +257,17 @@ a {
 	background-image: linear-gradient(to right, #399FDB, transparent, #399FDB);
 	display: flex;
 	justify-content: space-around;
+}
+
+.see-more {
+	height: 14rem;
+}
+
+.see-more__banner {
+	clip-path: polygon(0 0, 80% 0, 95% 60%, 95% 60%, 70% 100%, 40% 100%, 20% 100%, 0 100%);
+	shape-outside: polygon(0 0, 80% 0, 95% 60%, 95% 60%, 70% 100%, 40% 100%, 20% 100%, 0 100%);
+	height: 14rem;
+	padding: 0rem 1rem;
 }
 
 .name__word {
