--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@ body {
 	background-color: #6EC7FC;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 960px) {
 	body {
 		max-width: 960px;
 		margin: auto;
@@ -127,9 +127,8 @@ a {
 }
 
 .experience__separator {
-	border-top: 21rem solid #399FDB;
-	border-left: 5rem solid transparent;
-	border-right: 5rem solid transparent;
+
+	border: 1px solid #399FDB;
 }
 
 .site__header {
@@ -150,7 +149,7 @@ a {
 	height: 5rem;
 	background-image: linear-gradient(to right, #399FDB, transparent, #399FDB);
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 }
 
 .see-more {
@@ -219,7 +218,7 @@ a {
 	padding: 0;
 }
 
-a.project__banner {
+.project__name > a {
 	color: #161A1D; 
 }
 
@@ -398,4 +397,249 @@ img {
 		height: 20rem;
 	}
 
+}
+
+@media (min-width: 360px) {
+	.site__header {
+		flex-direction: column;
+	}
+
+	.about__banner {
+		width: 200px;
+		height: 10rem;
+		padding: 0rem 1rem;
+	}
+
+	.about__description {
+		padding: 0.5rem;
+		font-size: 1.3rem;
+	}
+
+	.about__header {
+		font-size: 2rem;
+		padding: 1rem 0rem;
+	}
+
+	.header__name {
+		font-size: 2rem;
+		flex: 1 1 auto;
+	}
+
+	.name__word:first-letter {
+		font-size: 4rem;
+	}
+
+	.side__shape {
+		display: none;
+	}
+
+	.experience {
+		font-size: 1.5rem;
+	}
+
+	.experience__item:last-child {
+		margin: 1rem;
+	}
+
+}
+
+@media (min-width: 600px) {
+
+	.header__name {
+		font-size: 3rem;
+	}
+
+	.about__banner {
+		width: 300px;
+		height: 18rem;
+		shape-outside: polygon(0 0, 100% 0, 50% 100%, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 50% 100%, 0 100%);
+	}
+
+	.about__description {
+		font-size: 1.5rem;
+	}
+
+	.experience {
+		font-size: 1.5rem;
+	}
+
+	.experience__separator {
+		border-top: 21rem solid #399FDB;
+		border-left: 3rem solid transparent;
+		border-right: 3rem solid transparent;
+	}
+
+	.about__header {
+		font-size: 3rem;
+		padding: 0;
+	}
+
+	.project__name {
+		font-size: 3rem;
+	}
+
+	.project__brief {
+		font-size: 1.4rem;
+	}
+
+	.project__description {
+		font-size: 1.5rem;
+	}
+
+	.see-more__banner {
+		font-size: 2.5rem;
+		height: 14rem;
+	}
+
+	.see-more__banner > .about__header {
+		font-size: 2.5rem;
+	}
+
+	.side__content {
+		font-size: 2.0rem;
+	}
+
+	.side__content--right {
+		font-size: 1.8rem;
+	}
+
+	.side__shape {
+		width: 13rem;
+		height: 22rem;
+		display: flex;
+	}
+
+	.side__shape--right {
+		width: 15rem;
+	}
+
+}
+
+@media (min-width: 800px) {
+	.header__name {
+		flex: 0 1 auto;
+	}
+
+	.about__banner {
+		width: 400px;
+		height: 19rem;
+		float: left;
+		background-color: #399FDB;
+		display: flex;
+		padding: 0rem 1rem;
+	}
+
+	.about__description {
+		font-size: 1.8rem;
+	}
+
+	.experience {
+		font-size: 1.5rem;
+	}
+
+	.experience__separator {
+		border-top: 21rem solid #399FDB;
+		border-left: 5rem solid transparent;
+		border-right: 5rem solid transparent;
+	}
+
+	.project__name {
+		font-size: 3.8rem;
+	}
+
+	.project__description {
+		font-size: 1.6rem;
+	}
+
+	.see-more__banner {
+		height: 14rem;
+	}
+}
+
+@media (min-width: 900px) {
+	.header__name {
+		justify-content: space-evenly;
+	}
+
+	.navbar__links {
+		justify-content: space-evenly;
+	}
+
+	.about__banner {
+		padding: 1rem;
+	}
+
+	.experience {
+		font-size: 1.7rem;
+	}
+
+	.experience__separator {
+		border-top: 21rem solid #399FDB;
+		border-left: 5rem solid transparent;
+		border-right: 5rem solid transparent;
+	}
+
+	.side__content, .side__content--right {
+		font-size: 2.5rem;
+	}
+
+	.side__shape, .side__shape--right {
+		width: 22rem;
+	}
+
+	.see-more {
+		height: 16rem;
+	}
+}
+
+@media (min-width: 960px) {
+	.site__header {
+		flex-direction: row;
+	}
+
+	.about__banner {
+		height: 22rem;
+	}
+	
+	.about__header {
+		font-size: 3.5rem;
+		padding: 2rem;
+	}
+
+	.experience__header {
+		padding: 0rem 0rem 1rem 0rem;
+	}
+	
+	.side__content {
+		padding: 0.5rem;
+	}
+
+	.side__shape {
+		height: 21rem;
+	}
+
+	.project__description {
+		font-size: 2rem;
+	}
+
+	.project:last-child {
+		height: 24rem;
+	}
+
+	.see-more {
+		height: 14rem;
+	}
+	
+	.see-more__banner {
+		clip-path: polygon(0 0, 80% 0, 95% 60%, 95% 60%, 70% 100%, 40% 100%, 20% 100%, 0 100%);
+		shape-outside: polygon(0 0, 80% 0, 95% 60%, 95% 60%, 70% 100%, 40% 100%, 20% 100%, 0 100%);
+		height: 14rem;
+		padding: 0rem 1rem;
+	}
+	
+	.see-more__banner > .about__header {
+		padding: 2rem 2rem 0rem 0rem;
+		font-size: 3.5rem;
+	}
 }
