--- a/css/main.scss
+++ b/css/main.scss
@@ -259,6 +259,7 @@ a {
 
 .single-post {
 	display: block;
+	box-shadow: none;
 }
 
 .post__excerpt {
@@ -285,12 +286,14 @@ a {
 	text-shadow: 1px 1px 2px rgba(0,0,0, 0.3);
 	line-height: 1.5;
 	background-image: linear-gradient(to right, #399FDB, transparent, #399FDB);
+	box-shadow: 0px 0px 7px 1px #161A1D;
 }
 
 .post__header--preview {
 	font-size: 2.5rem;
 	flex: 1 1 50%;
 	padding: 1rem;
+	box-shadow: none;
 }
 
 .post__content > h1 {
