Fix pagination look on Edge
Edge currently doesn't support space-evenly

See https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/15947692/

--- a/css/main.scss
+++ b/css/main.scss
@@ -361,8 +361,6 @@ a {
 .page_navigator {
 	display: flex;
 	align-items: center;
-	justify-content: space-evenly;
-	width: 66%;
 }
 
 .page__link {
@@ -376,6 +374,7 @@ a {
 	font-family: "Nothing you could do";
 	font-size: 3rem;
 	text-decoration: none;
+	margin-right: 2rem;
 }
 
 .page__link--selected {
